# backend/api-docs/api-docs.yaml
@@ -19,6 +19,10 @@ paths:
         schema:
           type: string
       responses:
+        "401":
+          description: Unauthorized
+        "400":
+          description: Bad request
         "500":
           description: Internal server error
         "200":
@@ -27,10 +31,6 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/AuthResponse'
-        "401":
-          description: Unauthorized
-        "400":
-          description: Bad request
   /api/auth/logout:
     post:
       tags:
@@ -38,18 +38,18 @@ paths:
       summary: Logout
       operationId: logout
       responses:
-        "500":
-          description: Internal server error
+        "403":
+          description: Forbidden
+        "401":
+          description: Unauthorized
         "200":
           description: Logout successful
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/AuthResponse'
-        "401":
-          description: Unauthorized
-        "403":
-          description: Forbidden
+        "500":
+          description: Internal server error
   /api/auth/login:
     post:
       tags:
@@ -74,20 +74,20 @@ paths:
               $ref: '#/components/schemas/LoginRequest'
         required: true
       responses:
-        "500":
-          description: Internal server error
-        "401":
-          description: Unauthorized
         "403":
           description: Forbidden
-        "400":
-          description: Bad request
         "200":
           description: Login successful
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/AuthResponse'
+        "401":
+          description: Unauthorized
+        "400":
+          description: Bad request
+        "500":
+          description: Internal server error
   /api/accounts:
     get:
       tags:
@@ -95,18 +95,18 @@ paths:
       summary: Get all accounts
       operationId: getAllAccounts
       responses:
+        "400":
+          description: Bad request
+        "500":
+          description: Internal server error
+        "404":
+          description: Account Repository not found
         "200":
           description: Found the form
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/Account'
-        "500":
-          description: Internal server error
-        "400":
-          description: Bad request
-        "404":
-          description: Account Repository not found
     post:
       tags:
       - rest-account-controller
@@ -139,18 +139,18 @@ paths:
         schema:
           type: string
       responses:
-        "500":
-          description: Internal server error
-        "404":
-          description: Account not Found
         "400":
           description: Bad request
+        "500":
+          description: Internal server error
         "200":
           description: Account Created
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/Account'
+        "404":
+          description: Account not Found
   /api/accounts/{id}/transfers:
     get:
       tags:
@@ -164,8 +164,6 @@ paths:
         schema:
           type: string
       responses:
-        "500":
-          description: Internal server error
         "404":
           description: Transfer Repository not found
         "400":
@@ -176,6 +174,8 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Transfer'
+        "500":
+          description: Internal server error
     post:
       tags:
       - rest-transfer-controller
@@ -198,18 +198,81 @@ paths:
         schema:
           type: string
       responses:
-        "500":
-          description: Internal server error
-        "404":
-          description: Transfer Repository not found
-        "400":
-          description: Bad request
         "200":
           description: transfer success
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/Transfer'
+        "404":
+          description: Transfer Repository not found
+        "400":
+          description: Bad request
+        "500":
+          description: Internal server error
+  /api/accounts/{id}/loans:
+    get:
+      tags:
+      - rest-loan-controller
+      summary: Get paginated user loans
+      operationId: getAllUserLoans
+      parameters:
+      - name: id
+        in: path
+        required: true
+        schema:
+          type: string
+      - name: page
+        in: query
+        required: false
+        schema:
+          type: integer
+          format: int32
+          default: 0
+      - name: size
+        in: query
+        required: false
+        schema:
+          type: integer
+          format: int32
+          default: 10
+      responses:
+        "404":
+          description: Loan Repository not found
+        "400":
+          description: Bad request
+        "500":
+          description: Internal server error
+        "200":
+          description: Found the loans
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Loan'
+    post:
+      tags:
+      - rest-loan-controller
+      summary: Calculate a loan for user
+      operationId: createLoan
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Loan'
+        required: true
+      responses:
+        "404":
+          description: Loan Repository not found
+        "200":
+          description: transfer success
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Transfer'
+        "400":
+          description: Bad request
+        "500":
+          description: Internal server error
   /api/accounts/{accountId}/image:
     get:
       tags:
@@ -222,18 +285,18 @@ paths:
         schema:
           type: string
       responses:
-        "500":
-          description: Internal server error
+        "400":
+          description: Bad request
         "200":
           description: Get Image by ID
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/Account'
-        "400":
-          description: Bad request
         "404":
           description: Form not found
+        "500":
+          description: Internal server error
     post:
       tags:
       - rest-account-controller
@@ -257,18 +320,18 @@ paths:
                   type: string
                   format: binary
       responses:
+        "400":
+          description: Bad request
+        "404":
+          description: Form not found
+        "500":
+          description: Internal server error
         "200":
           description: Found the form
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/Account'
-        "500":
-          description: Internal server error
-        "400":
-          description: Bad request
-        "404":
-          description: Form not found
     delete:
       tags:
       - rest-account-controller
@@ -281,6 +344,10 @@ paths:
         schema:
           type: string
       responses:
+        "400":
+          description: Bad request
+        "404":
+          description: Image not found
         "500":
           description: Internal server error
         "200":
@@ -289,10 +356,6 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Account'
-        "404":
-          description: Image not found
-        "400":
-          description: Bad request
   /transfers_manager_load:
     get:
       tags:
@@ -417,8 +480,6 @@ paths:
       summary: Get all transfers
       operationId: getAllTransfer
       responses:
-        "500":
-          description: Internal server error
         "404":
           description: Transfer Repository not found
         "400":
@@ -429,6 +490,8 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Transfer'
+        "500":
+          description: Internal server error
   /api/transfers/{id}:
     get:
       tags:
@@ -443,18 +506,45 @@ paths:
           type: integer
           format: int64
       responses:
-        "500":
-          description: Internal server error
         "400":
           description: Bad request
         "404":
           description: Form not found
+        "500":
+          description: Internal server error
         "200":
           description: Found the Transfer
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/Transfer'
+  /api/transfers/paged:
+    get:
+      tags:
+      - rest-transfer-controller
+      operationId: getAllTransfersPaged
+      parameters:
+      - name: page
+        in: query
+        required: false
+        schema:
+          type: integer
+          format: int32
+          default: 0
+      - name: size
+        in: query
+        required: false
+        schema:
+          type: integer
+          format: int32
+          default: 10
+      responses:
+        "200":
+          description: OK
+          content:
+            '*/*':
+              schema:
+                $ref: '#/components/schemas/PageTransfer'
   /api/accounts/{id}:
     get:
       tags:
@@ -468,18 +558,52 @@ paths:
         schema:
           type: string
       responses:
-        "500":
-          description: Internal server error
-        "400":
-          description: Bad request
         "200":
           description: Found the Account
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/AccountDTO'
+        "400":
+          description: Bad request
+        "500":
+          description: Internal server error
         "404":
           description: Account not found
+  /api/accounts/paged:
+    get:
+      tags:
+      - rest-account-controller
+      summary: Get paginated accounts
+      operationId: getAllAccountsPaged
+      parameters:
+      - name: page
+        in: query
+        required: false
+        schema:
+          type: integer
+          format: int32
+          default: 0
+      - name: size
+        in: query
+        required: false
+        schema:
+          type: integer
+          format: int32
+          default: 10
+      responses:
+        "400":
+          description: Bad request
+        "500":
+          description: Internal server error
+        "200":
+          description: Found the accounts
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ImagelessAccount'
+        "404":
+          description: Account Repository not found
   /account_load:
     get:
       tags:
@@ -538,6 +662,9 @@ components:
           type: string
         surname:
           type: string
+        balance:
+          type: integer
+          format: int32
         imageFile:
           type: object
           properties:
@@ -564,6 +691,25 @@ components:
           type: string
         transferType:
           type: string
+    Loan:
+      type: object
+      properties:
+        loan_id:
+          type: integer
+          format: int64
+        amount:
+          type: integer
+          format: int32
+        interest_rate:
+          type: number
+          format: float
+        periods:
+          type: integer
+          format: int32
+        date:
+          type: string
+        clientID:
+          type: string
     ProcessedTransfer:
       type: object
       properties:
@@ -583,6 +729,65 @@ components:
           type: string
         transferType:
           type: string
+    PageTransfer:
+      type: object
+      properties:
+        totalElements:
+          type: integer
+          format: int64
+        totalPages:
+          type: integer
+          format: int32
+        size:
+          type: integer
+          format: int32
+        content:
+          type: array
+          items:
+            $ref: '#/components/schemas/Transfer'
+        number:
+          type: integer
+          format: int32
+        sort:
+          $ref: '#/components/schemas/Sort'
+        first:
+          type: boolean
+        last:
+          type: boolean
+        numberOfElements:
+          type: integer
+          format: int32
+        pageable:
+          $ref: '#/components/schemas/Pageable'
+        empty:
+          type: boolean
+    Pageable:
+      type: object
+      properties:
+        offset:
+          type: integer
+          format: int64
+        sort:
+          $ref: '#/components/schemas/Sort'
+        pageSize:
+          type: integer
+          format: int32
+        pageNumber:
+          type: integer
+          format: int32
+        paged:
+          type: boolean
+        unpaged:
+          type: boolean
+    Sort:
+      type: object
+      properties:
+        sorted:
+          type: boolean
+        unsorted:
+          type: boolean
+        empty:
+          type: boolean
     AccountDTO:
       type: object
       properties:
@@ -595,4 +800,15 @@ components:
         surname:
           type: string
         imageBase64:
+          type: string
+    ImagelessAccount:
+      type: object
+      properties:
+        nip:
+          type: string
+        iban:
+          type: string
+        name:
+          type: string
+        surname:
           type: string
