# backend/src/main/java/webapp4/main/controller/RestTransferController.java
@@ -1,6 +1,8 @@
 package webapp4.main.controller;
 
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageRequest;
 import org.springframework.security.core.Authentication;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.ui.Model;
@@ -70,6 +72,18 @@ public class RestTransferController {
         Collection<Transfer> allTransfers = transferRepository.findAll();
         return ResponseEntity.ok(allTransfers);
     }
+
+     @GetMapping("/api/transfers/paged")
+    public ResponseEntity<Page<Transfer>> getAllTransfersPaged(
+        @RequestParam(defaultValue = "0") int page,
+        @RequestParam(defaultValue = "10") int size
+) {
+        PageRequest pageRequest = PageRequest.of(page, size);
+        Page<Transfer> transfers = transferRepository.findAll(pageRequest);
+    
+        return ResponseEntity.ok(transfers);
+    }
+
 
     @Operation (summary = "Get all user transfers")
     @ApiResponse(
